<resources>
    <string name="app_name">WanAndroid</string>
    <string name="string_home">首页</string>
    <string name="string_system">体系</string>
    <string name="string_project">项目</string>
    <string name="string_mine">我的</string>
    <string name="string_normal_net_error">网络错误</string>
    <string name="string_notinput_warning">请输入关键字</string>
    <string name="str_none" />
    <string name="loading">加载中…</string>
    <string name="load_failed">加载失败，点击重试</string>
    <string name="load_failed_no_network">网络失联了…\n请联网后点击重试</string>
    <string name="empty">空空如也</string>
    <string name="string_login_hint">请登录</string>
    <string name="string_collect">收藏</string>
    <string name="string_setting">设置</string>
    <string name="string_about">关于</string>
    <string name="string_input_search">你想要了解些什么呢</string>
    <string name="string_search">搜索</string>
    <string name="string_hot_search">搜索热词</string>
    <string name="string_search_history">历史记录</string>
    <string name="string_shared_url_hint">连接已复制到剪贴板，可以粘贴分享啦</string>
    <string name="string_login">登录</string>
    <string name="string_login_name_hint">用户名</string>
    <string name="string_login_password_hint">密码</string>
    <string name="string_sign">注册</string>
    <string name="string_username_empty">用户名不能为空</string>
    <string name="string_password_empty">密码为空</string>
    <string name="string_sign_repeat_password_hint">再次输入密码</string>
    <string name="et_password_repeat">请再次输入密码</string>
    <string name="string_password_not_equal">两次密码输入不一致</string>
    <string name="string_sign_success">注册成功</string>
    <string name="string_tour">游客</string>
    <string name="string_delete">删除</string>
    <string name="string_logout">退出登录</string>
    <string name="string_logout_success">退出登录成功</string>
</resources>
