<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/index_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/alpha_gray_white"
            android:minHeight="?attr/actionBarSize"
            style="@style/ToolBarStyle"
            >

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textColor="@color/theme_red"
                android:textSize="@dimen/small_middle_text_size" />
        </androidx.appcompat.widget.Toolbar>



        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_head_img"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_40dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/icon_head"
            app:civ_border_width="0dp"
            app:civ_border_color="#FF000000"
            />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_text_size"
        android:textColor="@color/design_text_black"
        android:layout_marginLeft="@dimen/app_margin_top"
        android:layout_marginRight="@dimen/app_margin_top"
       android:textColorHint="@color/gray"
        android:hint="@string/string_login_name_hint"
        android:layout_marginTop="@dimen/margin_40dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="text"
        />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_text_size"
        android:textColor="@color/design_text_black"
        android:layout_marginLeft="@dimen/app_margin_top"
        android:layout_marginRight="@dimen/app_margin_top"
        android:textColorHint="@color/gray"
        android:hint="@string/string_login_password_hint"
        android:layout_marginTop="@dimen/margin_40dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="textPassword"
        />

    <TextView
        android:foreground="?selectableItemBackground"
        android:id="@+id/tv_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_sign"
        android:textColor="@color/theme_red"
        android:textSize="@dimen/small_text_size"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/app_margin_top"
        android:layout_marginTop="@dimen/app_margin_left"
        />

    <TextView
        android:id="@+id/tv_login"
        android:layout_marginTop="@dimen/app_margin_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_login"
        android:background="@drawable/bg_cornor_red_rectangular"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size"
        android:layout_marginLeft="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_30dp"
        android:paddingTop="@dimen/app_margin_left"
        android:paddingBottom="@dimen/app_margin_left"
        android:gravity="center"
        android:foreground="?selectableItemBackground"
        />







</LinearLayout>